--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,12 +22,5 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        make deps
-
-    - name: Build
-      run: go build -v .
-
-    - name: Test
+    - name: All
       run: make
