added rabbitmq to action

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,5 +22,13 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
+    - name: Setup RabbitMQ with username and password
+      uses: getong/rabbitmq-action@v1.2
+      with:
+        rabbitmq version: '3.8.2-management-alpine'
+        host port: 5672
+        rabbitmq user: 'guest'
+        rabbitmq password: 'guest'
+
     - name: All
       run: make ci
