--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,14 +22,11 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Setup RabbitMQ with username and password
-      uses: getong/rabbitmq-action@v1.2
-      with:
-        rabbitmq version: '3.8.2-management-alpine'
-        host port: 5672
-        rabbitmq user: 'guest'
-        rabbitmq password: 'guest'
-        rabbitmq vhost: '/'
-
-    - name: All
-      run: make ci
+    - name: Setup etcd server and make
+      run: |
+        ETCD_VER=$(curl --silent https://api.github.com/repos/etcd-io/etcd/releases/latest | grep "tag_name" | cut -d ' ' -f4 | awk -F'"' '$0=$2')
+        curl -sL https://storage.googleapis.com/etcd/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o ./etcd.tar.gz
+        mkdir etcd && tar xzvf etcd.tar.gz -C etcd --strip-components=1
+        etcd/etcd > /dev/null &
+        sleep 30
+        make ci
