--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Setup etcd server and make
       run: |
-        ETCD_VER=$(curl --silent https://api.github.com/repos/etcd-io/etcd/releases/latest | grep "tag_name" | cut -d ' ' -f4 | awk -F'"' '$0=$2')
+        ETCD_VER=v3.4.14
         curl -sL https://storage.googleapis.com/etcd/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o ./etcd.tar.gz
         mkdir etcd && tar xzvf etcd.tar.gz -C etcd --strip-components=1
         etcd/etcd > /dev/null &
