some minor changes, renaming variables

--- a/tla/mcast0/mcast0.cfg
+++ b/tla/mcast0/mcast0.cfg
@@ -1,7 +1,7 @@
 CONSTANTS
     NPROCESS = 2
-    NMESSAGES = 3
-    Conflict <- ByIdConflict
+    NMESSAGES = 2
+    Conflict <- AlwaysConflict
 
 SPECIFICATION 
     Spec
