--- a/tla/mcast1/mcast1.cfg
+++ b/tla/mcast1/mcast1.cfg
@@ -1,8 +1,8 @@
 CONSTANTS
     NPARTITIONS = 2
     NPROCESS = 2
-    NMESSAGES = 3
-    Conflict <- ByIdConflict
+    NMESSAGES = 2
+    Conflict <- AlwaysConflict
 
 SPECIFICATION 
     Spec
