--- a/tla/mcast0/mcast0.cfg
+++ b/tla/mcast0/mcast0.cfg
@@ -1,14 +1,10 @@
 CONSTANTS
     NPROCESS = 2
-    NMESSAGES = 2
-    Conflict <- AlwaysConflict
+    NMESSAGES = 3
+    Conflict <- NeverConflict
 
 SPECIFICATION 
     Spec
 
 PROPERTY
-    Validity
-    Agreement
-    Integrity
-    PartialOrder
     Collision
