--- a/tla/mcast1/mcast1.cfg
+++ b/tla/mcast1/mcast1.cfg
@@ -1,8 +1,8 @@
 CONSTANTS
-    NPARTITIONS = 2
-    NPROCESS = 2
-    NMESSAGES = 2
-    Conflict <- AlwaysConflict
+    NGROUPS = 2
+    NPROCESS = 1
+    NMESSAGES = 4
+    CONFLICTR <- NeverConflict
 
 SPECIFICATION 
     Spec
